CHANGES in `usl' VERSION 2.1.0 (2020-xx-xx)

* Extend `scalability` function to accept additional parameter `gamma`.


CHANGES in `usl' VERSION 2.0.0 (2020-01-08)

* Version 2.0.0 is a major update that includes some breaking changes. The
  Universal Scalability Law has evolved from the original two coefficient
  formula into a three coefficient formula to obviate the need for parameter
  normalization. The following changes are made to align the package with
  the current use:
  - The previously used coefficients `sigma` and `kappa` are renamed to
    `alpha` and `beta`.
  - A new coefficient `gamma` is introduced. This coefficient corresponds
    to the scale factor calculated in earlier versions when parameter
    normalization was used.
  - The `default` method of the `usl()` function is no longer a separate
    solver method as normalization has been removed. Calling the function
    with either no or the `default` value for the `method` parameter will
    internally use the `nlxb` implementation.


CHANGES in `usl' VERSION 1.8.0 (2017-08-07)

* The `nlsr` package will replace the older `nlmrt` package. The package has
  been updated accordingly.


CHANGES in `usl' VERSION 1.7.0 (2016-10-13)

* The `summary()' command now shows the t-value and the two sided p-value for
  the coefficients sigma and kappa.


CHANGES in `usl' VERSION 1.6.0 (2016-06-17)

* Remove unused parameter `R' from the signature of the `confint()' function.

* Add additional section about multivalued data to vignette.


CHANGES in `usl' VERSION 1.5.0 (2016-02-25)

* Use method `nlxb' as fallback if the value for the scale factor is missing
  in the data and the `default' method is used. A warning message is printed
  in this case. This is more user-friendly than the error message given
  before.

* Remove unused parameter `R' from the signature of the `usl()' function.


CHANGES in `usl' VERSION 1.4.1 (2014-12-29)

* Depend on `methods' package instead of importing it. This fixes a problem