@@ -31,10 +31,6 @@ This class encapsulates the Universal Scalability Law. Use the function
 
 \item{\code{df.residual}}{The degrees of freedom of the model.}
 
-\item{\code{r.squared}}{Coefficient of determination of the model.}
-
-\item{\code{adj.r.squared}}{Adjusted coefficient of determination.}
-
 \item{\code{efficiency}}{The efficiency, e.g. speedup per processor.}
 
 \item{\code{na.action}}{The \code{na.action} used by the model.}
