@@ -45,7 +45,6 @@ gamma  89.9952330  14.2134894     6.33    0.0032  **
 Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 
 Residual standard error: 82.8 on 4 degrees of freedom
-Multiple R-squared: 0.99,	Adjusted R-squared: 0.987
 > 
 > proc.time()
    user  system elapsed 
