@@ -1,6 +1,8 @@
 CHANGES in `usl' VERSION 2.1.0 (2020-xx-xx)
 
 * Extend `scalability` function to accept additional parameter `gamma`.
+* Removed R-squared in `summary` output as it is not valid for nonlinear
+  regression.
 
 
 CHANGES in `usl' VERSION 2.0.0 (2020-01-08)
